syntax = "proto3";

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto
option go_package = "./;film";

package film;

message ContentID {
  uint64 ID = 1;
}

message Person {
  uint64 ID = 1;
  string Name = 2;
}

message Role {
  uint64 ID = 1;
  string Title = 2;
}

message PersonRole {
  Person Person = 1;
  Role Role = 2;
}

message Genre {
  uint64 ID = 1;
  string Name = 2;
}

message Selection {
  uint64 ID = 1;
  string Title = 2;
}

message Country {
  uint64 ID = 1;
  string Name = 2;
}

message Content {
  uint64 ID = 1;
  string Title = 2;
  string Description = 3;
  double Rating = 4;
  int32 Year = 5;
  bool IsFree = 6;
  int32 AgeLimit = 7;
  string TrailerURL = 8;
  string PreviewURL = 9;
  string Type = 10;
  repeated PersonRole PersonsRoles = 11;
  repeated Genre Genres = 12;
  repeated Selection Selections = 13;
  repeated Country Countries = 14;
}

message Film {
  uint64 ID = 1;
  string ContentURL = 2;
  Content Content = 3;
}

service FilmService {
  rpc GetByContentID (ContentID) returns (Film) {}
}
