syntax = "proto3";

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto
option go_package = "./;search";

package search;

message Content {
  uint64 ID = 1;
  string Title = 2;
  string Description = 3;
  double Rating = 4;
  int32 Year = 5;
  bool IsFree = 6;
  int32 AgeLimit = 7;
  string TrailerURL = 8;
  string PreviewURL = 9;
  string Type = 10;
}

message Person {
  uint64 ID = 1;
  string Name = 2;
  string Gender = 3;
  optional int32 Growth = 4;
  optional string Birthplace = 5;
  string AvatarURL = 6;
  int32 Age = 7;
}

message SearchResponse {
  repeated Content Content = 1;
  repeated Person Persons = 2;
}

message SearchParams {
  string Query = 1;
}

service SearchService {
  rpc Search (SearchParams) returns (SearchResponse) {}
}
