syntax = "proto3";

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto
option go_package = "./;selection";

package selection;

message ID {
  uint64 ID = 1;
}

message Content {
  uint64 ID = 1;
  string Title = 2;
  string Description = 3;
  double Rating = 4;
  int32 Year = 5;
  bool IsFree = 6;
  int32 AgeLimit = 7;
  string TrailerURL = 8;
  string PreviewURL = 9;
  string Type = 10;
}

message Selection {
  uint64 ID = 1;
  string Title = 2;
  repeated Content Content = 3;
}

message Selections {
  repeated Selection Selections = 1;
}

message Nothing {
  bool Dummy = 1;
}

service SelectionService {
  rpc GetAll (Nothing) returns (Selections) {}
  rpc GetByID (ID) returns (Selection) {}
}
